update: newsletter success message

--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -30,7 +30,7 @@
           {% render 'icon-success' %}
         </div>
         <p class="text-shof-green font-bold text-center">
-          Dziękuję za zapisanie się do newslettera!
+          Dziękuję za zapisanie się do newslettera! Teraz potwierdź zapis w swojej skrzynce, żebym mogła oficjalnie Cię przywitać.
         </p>
       </div>
     {% endif %}
